# agentic-sdlc-framework

./: .agentic-sdlc.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security-scan.yml
docs/: delivery-strategy.md  framework-overview.md  how-to-use.md  implementation-guide.md  implementation-plan.md  methodology.md  security-guardrails.md
examples/: before-after-case-study.md
examples/enterprise-pilot-example/: README.md  compliance-checklist.md  pilot-proposal.md  spec-internal-reporting.md
examples/fhlb-topeka-pilot/: agent-ready-spec.md  pilot-proposal.md
examples/personal-project-example/: README.md  spec-task-api.md
examples/regulated-financial-pilot/: README.md
handoffs/: HANDOFF-001.md
specs/: SPEC-2026-05-15-001.md  SPEC-2026-05-15-002.md  SPEC-2026-05-15-003.md
src/agentic_sdlc/: __init__.py  cli.py
src/agentic_sdlc/commands/: __init__.py  check.py  handoff.py  init.py  metrics.py  spec.py
src/agentic_sdlc/core/: __init__.py  config.py  templates.py  validation.py
src/agentic_sdlc/data/: __init__.py
src/agentic_sdlc/data/templates/: handoff-packet.md
src/agentic_sdlc/utils/: __init__.py  output.py
templates/: agent-ready-spec.md  architecture-decision-record.md  handoff-packet.md  pilot-proposal.md  weekly-scorecard.md
tests/: test_cli_check.py  test_cli_handoff.py  test_cli_init.py  test_cli_metrics.py  test_cli_spec.py  test_config.py  test_mcp_server.py  test_output.py  test_templates.py  test_validation.py
tools/golden-task-set/: BASELINE.md  README.md  baseline-results.jsonl  baseline-weekly-report.md  evaluate.py  tasks.yaml
tools/guardrail-scripts/: README.md  check-handoff-packet.py  generate-audit-trail.py  validate-intake.py  validate-spec.py
tools/mcp-server/: README.md  __init__.py  server.py
