[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "CLI for the Agentic SDLC Framework — governance, specs, and guardrails for AI-assisted development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "bigknoxy"}]
keywords = ["ai", "agents", "sdlc", "devops", "governance", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "colorama>=0.4",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/bigknoxy/agentic-sdlc-framework"
Repository = "https://github.com/bigknoxy/agentic-sdlc-framework"
"Bug Tracker" = "https://github.com/bigknoxy/agentic-sdlc-framework/issues"

[project.scripts]
agentic-sdlc = "agentic_sdlc.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_sdlc"]

[tool.hatch.build]
include = [
    "src/agentic_sdlc/**",
    "src/agentic_sdlc/data/**",
]

[tool.hatch.build.targets.wheel.shared-data]
"src/agentic_sdlc/data" = "agentic_sdlc/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/agentic_sdlc --cov=server --cov-report=term-missing --cov-fail-under=85"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "click[testing]>=8.1",
]
mcp = ["mcp>=1.0"]
